--- a/k9mail/src/main/res/values/strings.xml
+++ b/k9mail/src/main/res/values/strings.xml
@@ -820,6 +820,7 @@ Please submit bug reports, contribute new features and ask questions at
     <string name="messageview_preferences">Messages</string>
     <string name="folderlist_preferences">Folder lists</string>
     <string name="settings_theme_label">Theme</string>
+    <string name="settings_theme_color_label">Theme Color</string>
     <string name="settings_message_theme_label">Message view theme</string>
     <string name="settings_compose_theme_label">Composer theme</string>
     <string name="settings_language_label">Language</string>
@@ -1252,5 +1253,9 @@ Please submit bug reports, contribute new features and ask questions at
     <string name="apg_learn_more">You can <a href="https://k9mail.github.io/2017/01/13/Why-APG-is-no-longer-supported.html">click here</a> to learn more.</string>
     <string name="apg_deprecated_ok">Got it!</string>
     <string name="apg">APG</string>
+    <string name="color_picker_default_title">Select a Color</string>
+    <string name="color_swatch_description">Color <xliff:g id="color_index" example="14">%1$d</xliff:g></string>
+    <string name="color_swatch_description_selected">Color <xliff:g id="color_index" example="14">%1$d</xliff:g> selected</string>
+    <string name="pref_config">Color Picker</string>
 
 </resources>
