--- a/k9mail/src/main/res/values-sl/strings.xml
+++ b/k9mail/src/main/res/values-sl/strings.xml
@@ -3,7 +3,7 @@
   <!--=== App-specific strings =============================================================-->
   <!--This should make it easier for forks to change the branding-->
   <!--Used in AndroidManifest.xml-->
-  <string name="app_name">K-9 Mail</string>
+  <string name="app_name">K-9 Mail Material Fork</string>
   <string name="shortcuts_title">Računi K-9</string>
   <string name="unread_widget_label">Neprebrano K-9</string>
   <string name="remote_control_label">upravljanje programa K-9 na daljavo</string>
